# tide-crud-users

./: Cargo.toml  Insomnia.json  README.md  banner_listen.txt  build.rs  deny.toml  endpoints.txt  endpoints_found.txt
doc/: blockchained_monoliths.dot  microservices.dot  monolith.dot
pages/js/: main.js
scripts/: build.sh
src/: app.rs  banner_listen.rs  database.rs  endpoint.rs  main.rs  web_server.rs
src/api/: dispatcher.rs  mod.rs
src/api/add_user/: mod.rs  model.rs  outcome.rs  view.rs
src/api/delete_user/: mod.rs  model.rs  outcome.rs  view.rs
src/api/export_users/: mod.rs  model.rs  outcome.rs  view.rs
src/api/show_departments/: mod.rs  model.rs  outcome.rs  view.rs
src/api/show_permissions/: mod.rs  model.rs  outcome.rs  view.rs
src/api/show_statuses/: mod.rs  model.rs  outcome.rs  view.rs
src/api/show_user/: mod.rs  model.rs  outcome.rs  view.rs
src/api/show_users/: mod.rs  model.rs  outcome.rs  view.rs
src/api/update_user/: mod.rs  model.rs  outcome.rs  view.rs
src/frontend_endpoints/: favicon.rs  index_page.rs  main_js.rs  mod.rs  style_css.rs  uikit_css.rs  uikit_icons_min_js.rs  uikit_js.rs
src/internal_endpoints/: index_page.rs  maintenance_mode.rs  mod.rs
src/models/: mod.rs  users.rs
