[package]
name = "tide-crud-users"
version = "0.3.10"
authors = ["Antonio Feitosa <antonio.cfc@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]

# brickpack = { version = '0.9', git = 'https://github.com/afsec/brickpack/', branch = "main" }
# brickpack_derive = { version = '0.9', git = 'https://github.com/afsec/brickpack/', branch = "main" }

# brickpack = { path = '../brickpack/brickpack/' }
# brickpack_derive = { path = '../brickpack/brickpack_derive/' }

tide = "0.16.0"
async-std = { version = "1.9.0", features = ["attributes"] }
serde = { version = "1.0.125", features = ["derive"] }
clap = "2.33.3"
serde_json = "1.0.64"
r2d2_sqlite = "0.17.0"
r2d2 = "0.8.9"

[dependencies.rusqlite]
# features = ['bundled','column_decltype']
features = ['bundled']
version = '0.24.2'

# surf = { version = "2.1.0", default-features = false, features = ["h1-client"] }
