[package]
name = "tide-crud-users"
version = "0.4.5"
authors = ["Antonio Feitosa <antonio.cfc@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]

tide = "0.16.0"
async-std = { version = "1.9.0", features = ["attributes"] }
serde = { version = "1.0.125", features = ["derive"] }
clap = "2.33.3"
serde_json = "1.0.64"
r2d2_sqlite = "0.18.0"
r2d2 = "0.8.9"

[dependencies.rusqlite]
features = ['bundled']
version = '0.25.0'

[build-dependencies]
regex = "1.4.5"
